Refactor testing of RemoteNameUUIDApi to parameterized integration tests